--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -129,7 +129,7 @@ The on/off-switch enables or disables myStress\' recording.
 <string name="AF_e">Provides the estimated audio frequency, determining the sound pitch. Measured in Hz.</string>
 <string name="AS_d">Ambient Noise Level</string>
 <string name="AS_e">Provides the estimated noise level, measured in dB.</string>
-<string name="AU_d">Call Audio</string>
+<string name="AU_d">Audio Analysis</string>
 <string name="AU_e">Analysis of audio signal during call.</string>
 <string name="AV_d">Activity variance</string>
 <string name="AV_e">Calculates variance of user activity (see AC).</string>
@@ -157,10 +157,6 @@ The on/off-switch enables or disables myStress\' recording.
 <string name="CL_e">Provides the current location area code as given by the mobile operator.</string>
 <string name="CC_d">Mobile Country Code</string>
 <string name="CC_e">Provides the current mobile country code as given by the mobile operator.</string>
-<string name="EB_d">Event button widget</string>
-<string name="EB_e">Provides event descriptions annotated by the user through the Event Widget.</string>
-<string name="ET_d">Shared text</string>
-<string name="ET_e">Provides text shared to myStress from any application that allows it.</string>
 <string name="GO_d">GPS longitude</string>
 <string name="GO_e"></string>
 <string name="GL_d">GPS latitude</string>
@@ -179,10 +175,6 @@ The on/off-switch enables or disables myStress\' recording.
 <string name="HI_e">Provides speed in meter-per-second through the Zephyr HxM monitor.</string>
 <string name="HL_d">Device battery level</string>
 <string name="HL_e">Provides the battery level of the Zephyr HxM monitor.</string>
-<string name="MW_d">Watched media folder</string>
-<string name="MW_e">Provides filenames of media newly created within the pre-defined folder, such as for detecting snapshots taken.</string>
-<string name="MO_d">Mood button widget</string>
-<string name="MO_e">Provides mood as selected or created by the user through the Mood Widget.</string>
 <string name="MP_d">Currently playing</string>
 <string name="MP_e">Provides information about the music playing (artist:album:track).</string>
 <string name="MA_d">Current Artist</string>
@@ -193,7 +185,7 @@ The on/off-switch enables or disables myStress\' recording.
 <string name="MT_e">Provides name for the current music track.</string>
 <string name="NO_d">Notification</string>
 <string name="NO_e">Provides information on notifications from Skype and Google Hangout.</string>
-<string name="TI_d">Text Length</string>
+<string name="TI_d">Text Information</string>
 <string name="TI_e">Determines length of each text input.</string>
 <string name="AZ_d">Azimuth</string>
 <string name="AZ_e">Provides the phone\'s azimuth - the angle towards the magnetic pole.</string>
@@ -205,7 +197,7 @@ The on/off-switch enables or disables myStress\' recording.
 <string name="PR_e">Provides proximity of any object towards the phone\'s front (usually upper side of) screen.</string>
 <string name="LI_d">Ambient Light</string>
 <string name="LI_e">Provides the light intensity as measured by the phone\'s sensor.</string>
-<string name="PH_d">Call log</string>
+<string name="PH_d">Call Log</string>
 <string name="PH_e">Provides the call log and the call duration.</string>
 <string name="PU_d">Ambient Pressure</string>
 <string name="PU_e">Provides the atmospheric pressure as measured by the phone\'s sensor (if available).</string>
@@ -235,6 +227,10 @@ The on/off-switch enables or disables myStress\' recording.
 <string name="IC_e">Provides information about an incoming call: phone number and contact name (if in phonebook).</string>
 <string name="OC_d">Outgoing Call</string>
 <string name="OC_e">Provides information about an outgoing call: phone number and contact name (if in phonebook).</string>
+<string name="SL_d">Stress level</string>
+<string name="SL_e">Shows user selection for perceived stress level.</string>
+<string name="SM_d">Stress meta data</string>
+<string name="SM_e">Shows status of stress level poll.</string>
 <string name="SR_d">Received SMS</string>
 <string name="SR_e">Provides information about a received sms: phone number, contact name (if in phonebook) and message.</string>
 <string name="SS_d">Sent SMS</string>
