--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -280,11 +280,11 @@ Der An/Aus-Schalter aktiviert bzw. deaktiviert die Aufnahme von myStress.
 <string name="myStress_Map">myStress Map</string>
 <string name="myStress_Timeline">myStress Timeline</string>
 <string name="polltime">5000</string>
-<string name="stresspolltime">5000</string>
+<string name="stresspolltime">3600000</string>
 <string name="stresssnoozetime">900000</string>
 <string name="time1">10</string>
 <string name="time2">14</string>
-<string name="time3">00</string>
+<string name="time3">18</string>
 
 <string name="notnow">In 15 Min.</string>
 <string name="skip">Diesmal nicht</string>
