--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -33,9 +33,9 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 The on/off-switch enables or disables myStress\' recording.
 \nWhile recordings are disabled, you can disable the notification in the notification area using the checkbox.
 \n\nOnce recordings are started, myStress runs mainly in the background and determines the values of all integrated sensors in intervals of 6 minutes.
-\nThrice daily you are asked to answer four short questions regarding your current stress level, yet you can delay or skip them.
-\nIn case you delayed, the questionnaire appears again in 15 minutes or can be previously accessed by opening myStress.
-\n\nWhen recordings are running, aggregated values over a selectable period of time are shown in the main window.
+\nThree times daily you are asked to answer four short questions regarding your current stress level, yet you can delay or skip them.
+\nIn case you delayed, the questionnaire appears again in 15 minutes or can previously be accessed by opening myStress.
+\n\nWhile recordings are running, aggregated values over a selectable period of time are shown in the main window.
 \nA list of all measurements can be accessed by clicking on the notification or selecting the corresponding menu item in the main window.</string>
 <string name="recording_prompt">Type of Recording</string>
 <string name="MapAbout">Shows a path of recent GPS recording. You can click on a marker for more information. You can center the map either on your current location or the last stored one (using the buttons on the top right). You can also switch between map or satellite view with the appropriate options menu item.</string>
@@ -57,7 +57,7 @@ The on/off-switch enables or disables myStress\' recording.
 \n\nThe objective of this research process is the unobtrusive recognition and prediction of stress.
 \n\nThe current version of myStress records on the one hand the source for stress and on the other hand the felt stress level to detected stress relevant charateristics.
 \n\nOnce recordings are started, myStress runs mainly in the background and determines the values of all integrated sensors in intervals of 6 minutes.
-\n\nThrice daily you are asked to answer four short questions regarding your current stress level, yet you can delay or skip them.
+\n\nThree times daily you are asked to answer four short questions regarding your current stress level, yet you can delay or skip them.
 \n\n\nFor further questions please have a look at the FAQ (only available in german!) http://goo.gl/nJBiXZ or send an email to myStress@fim-rc.de
 </string>
 
@@ -322,8 +322,9 @@ The on/off-switch enables or disables myStress\' recording.
 <string name="valueDescription8">Average amplient amplitude:</string>
 <string name="refresh">Refresh</string>
 <string name="whatsNew">Changelog</string>
+<string name="whatsNew1">- dramatically improved battery life\n- new menu item providing access to the final questionnaire</string>
 <string name="whatsNew2">Thank you very much for participating in our research study.\nThe stress level questionnaire has already been filled out</string>
-<string name="whatsNew3">times. Please answer the questionnaire 30 times for successfully finishing the study. We will inform you, when you reached this goal.\nThank you!</string>
-<string name="finished1">Thank you very much for participating in our research study. One last request: You can access the final questionnaire of our study via this link (mystress.limequery.com/index.php/647725/lang-en?id=</string>
-<string name="finished2">). You can also give us feedback to our study and app.\nAfter this you can deinstall myStress, but we would be happy to keep you as user.</string>
+<string name="whatsNew3">times. Please answer the questionnaire 30 times for successfully finishing the study. We will inform you as soon as you achieved this goal.\nThank you!</string>
+<string name="finished1">Thank you very much for participating in our research study. We want to ask you for one last favour: please complete the final questionnaire of our study via this link (http://mystress.limequery.com/index.php/647725/lang-en?id=</string>
+<string name="finished2">). You can also give us feedback to our study and app.\nAfter this you can uninstall myStress, but we would be happy to keep you as user.</string>
 </resources>
