--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -322,9 +322,9 @@ The on/off-switch enables or disables myStress\' recording.
 <string name="valueDescription8">Average amplient amplitude:</string>
 <string name="refresh">Refresh</string>
 <string name="whatsNew">Changelog</string>
-<string name="whatsNew1">- dramatically improved battery life\n- new menu item providing access to the final questionnaire</string>
+<string name="whatsNew1">- 2 critical bugs fixed\n- myStress now available in English language\n- dramatically reduced battery usage\n- new menu item providing access to the final questionnaire\n\n</string>
 <string name="whatsNew2">Thank you very much for participating in our research study.\nThe stress level questionnaire has already been filled out</string>
-<string name="whatsNew3">times. Please answer the questionnaire 30 times for successfully finishing the study. We will inform you as soon as you achieved this goal.\nThank you!</string>
-<string name="finished1">Thank you very much for participating in our research study. We want to ask you for one last favour: please complete the final questionnaire of our study via this link (http://mystress.limequery.com/index.php/647725/lang-en?id=</string>
-<string name="finished2">). You can also give us feedback to our study and app.\nAfter this you can uninstall myStress, but we would be happy to keep you as user.</string>
+<string name="whatsNew3">times. Please answer the questionnaire 33 times to successfully finish the study. We will inform you as soon as you achieved this goal.\nThank you!</string>
+<string name="finished1">Thank you very much for participating in our research study. We want to ask you for one last favour: please complete the final questionnaire of our study via this link (http://goo.gl/udHRSb?id=</string>
+<string name="finished2">). You can also give us feedback to our study and app.</string>
 </resources>
