--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -279,8 +279,8 @@ Der An/Aus-Schalter aktiviert bzw. deaktiviert die Aufnahme von myStress.
 <string name="myStressUpload">myStress Upload</string>
 <string name="myStress_Map">myStress Map</string>
 <string name="myStress_Timeline">myStress Timeline</string>
-<string name="polltime">5000</string>
-<string name="stresspolltime">600000</string>
+<string name="polltime">300000</string>
+<string name="stresspolltime">3600000</string>
 <string name="stresssnoozetime">900000</string>
 <string name="time1">10</string>
 <string name="time2">14</string>
@@ -319,9 +319,9 @@ Der An/Aus-Schalter aktiviert bzw. deaktiviert die Aufnahme von myStress.
 <string name="valueDescription8">Durchschnittliche Umgebungslautstärke:</string>
 <string name="refresh">Aktualisieren</string>
 <string name="whatsNew">Änderungen</string>
-<string name="whatsNew1">- stark verbesserte Batterielaufzeit\n- neuer Menüeintrag, um Abschlussfragebogen zu erreichen\n\n</string>
+<string name="whatsNew1">- zwei kritische Fehler behoben\n- myStress ist jetzt auch auf Englisch verfügbar\n- drastisch reduzierter Batterieverbrauch\n- zusätzlicher Menüeintrag, um Abschlussfragebogen zu erreichen\n\n</string>
 <string name="whatsNew2">Vielen Dank für die Teilnahme an unserer Studie.\nDer Stresslevel-Fragebogen wurde bereits</string>
-<string name="whatsNew3">Mal ausgefüllt. Der Fragebogen muss bitte 30 mal ausgefüllt werden, damit diese Studie erfolgreich beendet werden kann. Sobald die Zahl erreicht ist, erscheint ein neuer Hinweis.\nVielen Dank!</string>
-<string name="finished1">Vielen Dank für die Teilnahme an unserer Studie. Noch eine letzte Bitte: Über diesen Link (http://mystress.limequery.com/index.php/647725/lang-de?id=</string>
-<string name="finished2">) gelangt man zum Abschlussfragebogen der Studie. Dort kann auch zusätzliches Feedback zur Studie oder zur App gegeben werden.\nDie App kann anschließend deinstalliert, darf aber auch gerne weiter benutzt werden.</string>
+<string name="whatsNew3">Mal ausgefüllt. Der Fragebogen muss bitte 33 mal ausgefüllt werden, damit diese Studie erfolgreich beendet werden kann. Sobald die Zahl erreicht ist, erscheint ein neuer Hinweis.\nVielen Dank!</string>
+<string name="finished1">Vielen Dank für die Teilnahme an unserer Studie. Noch eine letzte Bitte: Über diesen Link (http://goo.gl/yIuO0V?id=</string>
+<string name="finished2">) gelangt man zum Abschlussfragebogen der Studie. Dort kann auch zusätzliches Feedback zur Studie oder zur App gegeben werden.</string>
 </resources>
