--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -319,7 +319,7 @@ Der An/Aus-Schalter aktiviert bzw. deaktiviert die Aufnahme von myStress.
 <string name="valueDescription8">Durchschnittliche Umgebungslautstärke:</string>
 <string name="refresh">Aktualisieren</string>
 <string name="whatsNew">Änderungen</string>
-<string name="whatsNew1">- zwei kritische Fehler behoben\n- myStress ist jetzt auch auf Englisch verfügbar\n- drastisch reduzierter Batterieverbrauch\n- zusätzlicher Menüeintrag, um Abschlussfragebogen zu erreichen\n\n</string>
+<string name="whatsNew1">- Problem beim Dateiupload behoben\n\n</string>
 <string name="whatsNew2">Vielen Dank für die Teilnahme an unserer Studie.\nDer Stresslevel-Fragebogen wurde bereits</string>
 <string name="whatsNew3">Mal ausgefüllt. Der Fragebogen muss bitte 33 mal ausgefüllt werden, damit diese Studie erfolgreich beendet werden kann. Sobald die Zahl erreicht ist, erscheint ein neuer Hinweis.\nVielen Dank!</string>
 <string name="finished1">Vielen Dank für die Teilnahme an unserer Studie. Noch eine letzte Bitte: Über diesen Link (http://mystress.limequery.com/index.php/647725/lang-de?id=</string>
